[package]
name = "kaffe"
version = "0.1.0"
edition = "2024"
about = "half coffee tracker, half Rust learning project"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
jiff = { version = "0.2.23", features = ["serde"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
